--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,93 @@ services:
     ports:
       - "2181:2181"
   kafka:
-    build: .
+    image: kafkadocker_kafka
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+      KAFKA_ADVERTISED_PORT: 9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "linkqueue:1:1,rawqueue:1:1,docqueue:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+  initservice:
+    image: atyron/init-service:v0.0.1-dev
+    container_name: initservice
+    ports:
+      - "8088:8088"
+    environment:
+      INIT_PORT: 8088
+      KAFKA_ADDRESS: kafka:9092
+      LINK_QUEUE_TOPIC: linkqueue
+    restart: unless-stopped
+    depends_on:
+      - kafka
+  docservice:
+    image: atyron/docservice:v0.0.1-dev
+    container_name: docservice
+    environment:
+      ADDRESS: 0.0.0.0:8000
+      KAFKA_ADDRESS: kafka:9092
+      LINK_QUEUE_TOPIC: linkqueue
+      RAW_QUEUE_TOPIC: rawqueue
+      DOC_QUEUE_TOPIC: docqueue
+      RESOURCE_CACHE_ADDRESS: http://rawcache:8000
+    restart: unless-stopped
+    links:
+      - rawcache
+    depends_on:
+      - kafka
+      - rawcache
+  linkservice:
+    image: atyron/linkservice:v0.0.1-dev
+    container_name: linkservice
+    environment:
+      ADDRESS: 0.0.0.0:8000
+      KAFKA_ADDRESS: kafka:9092
+      LINK_QUEUE_TOPIC: linkqueue
+      RAW_QUEUE_TOPIC: rawqueue
+      SKIP_LIST_PATH: /opt/skip_list.txt
+    restart: unless-stopped
+    depends_on:
+      - kafka
+  docstorage:
+    image: atyron/docstorage:v0.0.1-dev
+    container_name: docstorage
+    environment:
+      ADDRESS: 0.0.0.0:8000
+      KAFKA_ADDRESS: kafka:9092
+      DOC_QUEUE_TOPIC: docqueue
+      ELASTIC_ADDRESS: elastic:9200
+      DOC_INDEX_NAME: adverts
+    restart: unless-stopped
+    links:
+      - elastic
+    depends_on:
+      - kafka
+      - elastic
+  elastic:
+    image: elasticsearch:5.1.1
+    expose:
+      - "9200"
+    ports:
+      - "9200:9200"
+  rawcache:
+    image: atyron/rawcache:v0.0.1-dev
+    container_name: rawcache
+    environment:
+      ADDRESS: 8000
+      KAFKA_ADDRESS: kafka:9092
+      RAW_QUEUE_TOPIC: rawqueue
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_DB: 0
+    restart: unless-stopped
+    links:
+      - redis
+    depends_on:
+      - kafka
+      - redis
+  redis:
+    image: redis:3
+    expose:
+      - "6379"
