--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "2181:2181"
   kafka:
-    image: kafkadocker_kafka
+    image: wurstmeister/kafka
     ports:
       - "9092:9092"
     environment:
